# Proyecto-de-Desarrollo

./: .env  .gitignore  AccesoRapido.py  README.md  docker-compose.yml  pyproject.toml  repositoriodesarrollo.toml  validate_fixes.py
app/: __init__.py  main.py
app/controllers/: __init__.py  pdf_routes.py  user_routes.py
app/core/: __init__.py  config.py  database.py  exceptions.py  mongo_repository.py  repository.py  utils.py
app/models/: __init__.py  base_model.py  pdf_document.py  user.py
app/schemas/: __init__.py  pdf_schemas.py  user_schemas.py
app/services/: __init__.py  ai_service.py  base_service.py  pdf_service.py  user_service.py
config/: .env  .env.example  bibliotecas.md  repositoriodesarrollo.toml  requirements.txt
docs/: 01_START_HERE.md  02_QUICK_START.md  03_ARCHITECTURE.md  04_STRUCTURE_SUMMARY.md  CLEAN_CODE_FIXES.md  CLEAN_CODE_VERIFICATION.md  GUIA_COMPLETA.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  dependencias.md
repositoriodesarrollo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run.py
skills/: TDD.md  clean-code.md
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_services.py
